syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/ferseg/golang-simple-bank/pb";

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  string sessionId = 1;
  string accessToken = 2;
  string refreshToken = 3;
  google.protobuf.Timestamp accessTokenExpiresAt = 4;
  google.protobuf.Timestamp refreshTokenExpiresAt = 5;
  User user = 6;
}
